# burn-mamba-example

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: deploy.yml
frontend/: index.html
frontend/mamba1/: index.js
frontend/mamba2/: index.html
mamba1/: index.html
mamba1/pkg/: burn_mamba_example.d.ts  burn_mamba_example.js  burn_mamba_example_bg.wasm.d.ts  package.json
mamba2/pkg/: README.md  burn_mamba_example.d.ts  burn_mamba_example.js  burn_mamba_example_bg.wasm.d.ts  package.json
pkg/: README.md  burn_mamba_example.d.ts  burn_mamba_example.js  burn_mamba_example_bg.wasm.d.ts
src/: lib.rs
src/common/: mod.rs  safetensors_load.rs
src/native/: main.rs  safetensors_load.rs
src/wasm/: console_ui.rs  mod.rs
src/wasm/yew_ui/: mod.rs  model.rs  update.rs  view.rs
