[package]
name = "burn-mamba-example"
version = "0.1.0"
edition = "2024"

[features]
## defaults
default = [] # by default just re-exports common/ as a library
# default = ["native", "ndarray"] # for native dev
# default = ["ndarray"] # for wasm web-console dev - also check .cargo/config.toml
# default = ["ndarray", "yew"] # for wasm + web-yew dev - also check .cargo/config.toml
#
## binary from src/native/main.rs
native = []
#
## burn features
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"] # note: currently (burn 0.17.0) has numerical error for cacheless mode
#
## yew UI
yew = ["dep:yew", "dep:gloo-timers", "dep:humansize", "dep:indexed_db_futures"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "burn_mamba_example"
path = "src/native/main.rs"
required-features = ["native"]

[dependencies]
anyhow = "1.0.0"
log = "0.4.26"
pretty_env_logger = "0.5.0"
safetensors = { version = "0.5.2", default-features = false, features = ["std"] }
rand = "0.9.0"
#
## tokenizer
candle-core = "0.8.4"
candle-transformers = "0.8.4" # used for tokenizer
tokenizers = { version = "0.21.1", default-features = false, features = [
    "unstable_wasm",
] }

[dependencies.burn]
# version = "0.17.0"
## 2025-03-28 main
## using dev because ndarray shows numerical imprecision for cacheless mode in burn 0.16.0
git = "https://github.com/tracel-ai/burn.git"
rev = "3bc9c7a4e43365a80a36c38a04dfa40bb21c529d"
default-features = false
features = []

[dependencies.burn-mamba]
git = "https://github.com/swfsql/burn-mamba.git"
## 2025-04-01 main (0.1.0)
rev = "9a837401785d80dec30fd16f63c74109da3ae6a7"

## non-wasm target

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = { version = "0.9.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.hf-hub]
version = "0.3.2"
git = "https://github.com/swfsql/hf-hub.git"
rev = "a411dde1a7ab30d782cb978955b922551fb7eeb1"
default-features = false
features = ["online"]

## wasm target

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
log = "0.4.26"
console_log = { version = "1.0.0", features = ["color"] }
web-time = "1.1.0"
#
## https://github.com/rust-random/getrandom/#webassembly-support
getrandom = { version = "0.3.2", features = ["wasm_js"] }
#
## yew ui
yew = { version = "0.21.0", features = ["csr"], optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
humansize = { version = "2.1.3", optional = true }
indexed_db_futures = { version = "0.4.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.hf-hub]
version = "0.3.2"
git = "https://github.com/swfsql/hf-hub.git"
rev = "a411dde1a7ab30d782cb978955b922551fb7eeb1"
default-features = false
features = ["wasm"]
