[package]
name = "burn-mamba-example"
version = "0.2.0"
edition = "2024"

[features]
## defaults
default = [] # by default just re-exports common/ as a library
# default = ["native", "ndarray", "mamba2"] # for native dev
# default = ["native", "wgpu", "mamba2"] # for native wgpu
# default = ["native", "cuda", "mamba2"] # for native cuda
# default = ["native", "tch", "mamba2"] # for native torch
# default = ["ndarray", "mamba2"] # for wasm web-console dev - also check .cargo/config.toml
# default = ["ndarray", "yew", "mamba2"] # for wasm + web-yew dev - also check .cargo/config.toml
#
## mamba version (can have both features only as a library)
mamba1 = ["burn-mamba/mamba1"]
mamba2 = ["burn-mamba/mamba2"]
#
## binary from src/native/main.rs
native = []
#
## burn backend - check README for more info
ndarray = ["burn/ndarray"]
simd = ["ndarray", "burn/simd", "burn/default"]
tch = ["burn/tch", "dep:cc"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
#
## burn extra features - check README for more info
fusion = ["burn/fusion"]
#
## wasm yew UI
yew = ["dep:yew", "dep:gloo-timers", "dep:humansize", "dep:indexed_db_futures"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "burn_mamba_example"
path = "src/native/main.rs"
required-features = ["native"]

[dependencies]
anyhow = "1.0.0"
log = "0.4.28"
pretty_env_logger = "0.5.0"
safetensors = { version = "0.5.2", default-features = false, features = ["std"] }
rand = "0.9.2"
half = "2.6.0"
#
## tokenizer
candle-core = "0.8.4"
candle-transformers = "0.8.4" # used for tokenizer
tokenizers = { version = "0.21.1", default-features = false, features = [
    "unstable_wasm",
] }

[dependencies.burn]
# version = "0.19.0"
git = "https://github.com/tracel-ai/burn.git"
# 2025-10-20 main
rev = "d7e1b08cab5bcfad76923bed0262a76a96341aeb"
default-features = false

[dependencies.burn-mamba]
path = "../burn-mamba"
#git = "https://github.com/swfsql/burn-mamba.git"
### 2025-10-20 main (0.3.0)
#rev = "01ab28c76e8e4f183ddf1ee05faf75ac43812782"
default-features = false

## non-wasm target
#
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = { version = "0.9.0", default-features = false }
cc = { version = "1.2.18", optional = true }
#
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.hf-hub]
version = "0.3.2"
git = "https://github.com/swfsql/hf-hub.git"
rev = "a411dde1a7ab30d782cb978955b922551fb7eeb1"
default-features = false
features = ["online"]


## wasm target
#
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
log = "0.4.26"
console_log = { version = "1.0.0", features = ["color"] }
web-time = "1.1.0"
#
## https://github.com/rust-random/getrandom/#webassembly-support
getrandom = { version = "0.3.2", features = ["wasm_js"] }
#
## yew ui
yew = { version = "0.21.0", features = ["csr"], optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
humansize = { version = "2.1.3", optional = true }
indexed_db_futures = { version = "0.4.1", optional = true }
#
[target.'cfg(target_arch = "wasm32")'.dependencies.hf-hub]
version = "0.3.2"
git = "https://github.com/swfsql/hf-hub.git"
rev = "a411dde1a7ab30d782cb978955b922551fb7eeb1"
default-features = false
features = ["wasm"]
